warning message for highlighter. uesed pygments instead

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:         true
+# highlighter:         true
+pygments:         true
 
 # Permalinks
 permalink:        pretty
