_config file changed

--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ permalink:        pretty
 # Setup
 title:            Salman Wahed's blog
 tagline:          ''
-description:      'Tech blogging.'
+description:      'Technical Writings'
 url:              http://salmanwahed.github.io
 
 author:
-  name:           'Mark Otto'
+  name:           'Salman Wahed'
   url:            https://twitter.com/salman_wahed
 
 paginate:         1
 
 # Custom vars
-version:          2.0.0
+version:          3.0.0
 
 github:
   repo:           https://github.com/salmanwahed/salmanwahed.github.io
