--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,12 @@ version:          3.0.0
 
 github:
   repo:           https://github.com/salmanwahed/salmanwahed.github.io
+
+
+# Social links
+twitter_username:     salman_wahed
+github_username:      salmanwahed
+linkedin_username:    salmanwahed
+google_plus_username: +SalmanWahed
+facebook_username:    salmanwahed
+stack_overflow_username: salmanwahed
